Sasuke Bow skin.css
/* ... */
fieldset,
fieldset dl dl,
fieldset fieldset fieldset,
fieldset fieldset dl dl,
dd.hideme,
form blockquote.userstuff {
  background: rgba(238, 234, 204, 0.9);
  border: 2px solid #c5d8e8;
  border-radius: 8px;
  box-shadow: none;
}

fieldset.warnings,
fieldset fieldset {
  background: rgba(238, 234, 204, 0.9);
}

.filters dl {
  border: none;
  box-shadow: none;
  background: transparent;
}

.javascript .filters fieldset {
  background: #eeeacc;
  color: #4a4a6a;
}

.filtering .filters #leave_filters {
  background: #c5d8e8;
}

input,
textarea,
select {
  background: rgba(238, 234, 204, 0.9);
  color: #4a4a6a;
  border: 2px solid #b0aed4;
  border-radius: 8px;
  box-shadow: none;
  padding-left: .5em;
}

input:focus,
select:focus,
textarea:focus,
.autocomplete div.dropdown ul,
.search [role="tooltip"] {
  background: #c5d8e8;
  color: #3a3a5a;
  padding-left: .5em;
}

.footnote,
p.character_counter {
  color: #4a4a6a;
}

.autocomplete.dropdown {
  background: transparent;
}

.autocomplete.dropdown p.notice {
  background: #c5d8e8;
  padding: 0 !important;
}

.required,
.error,
.alert.flash,
label,
dt.notes {
  color: #5a5a7a;
}

form.verbose legend,
.verbose form legend {
  background: #c5d8e8;
  border: 2px solid #b0aed4;
  border-radius: 8px;
  box-shadow: none;
}

span.question {
  background: #c5d8e8;
  border: 1px solid #b0aed4;
  padding: 1px;
  color: #222240;
  font-family: "Century Gothic", sans-serif;
  box-shadow: none;
}

input[type="checkbox"],
.actions li label input[type="checkbox"] {
  appearance: none;
  background: #c5d8e8;
  border: 1px solid #b0aed4;
  width: 15px;
  height: 15px;
  border-radius: 4px;
  box-shadow: none;
}

input[type="checkbox"]:checked,
.actions li label input[type="checkbox"]:checked {
  background: #8a88b8;
  box-shadow: none;
}

input[type=radio] {
  appearance: none;
  background: #c5d8e8;
  border: 1px solid #b0aed4;
  width: 12px;
  height: 12px;
  border-radius: 50%;
}

input[type=radio]:checked {
  background: #8a88b8;
}

.filters .indicator:before {
  background: #c5d8e8;
  border: 1px solid #b0aed4;
  background-image: none;
}

.filters [type="checkbox"]:checked + .indicator:before {
  background: #b0aed4;
  background-image: none;
  color: #222240;
}

.filters [type="radio"]:checked + .indicator:before {
  background: #8a88b8;
  background-image: none;
}

.filters .exclude [type="checkbox"]:checked + .indicator:before {
  background: #b0aed4;
  background-image: none;
  color: #222240;
}

.filters .expander,
.filters .expanded .expander {
  filter: none;
}

.filters .more dd.search,
dd.autocomplete li.input {
  max-width: 10.7em;
}

.resp-sharing-button--bluesky,
.resp-sharing-button--tumblr {
  background: #d8e8f0 !important;
  border: 1px solid #c5d8e8 !important;
  border-radius: 8px;
  box-shadow: none !important;
}

.toggled form,
.dynamic form,
div.dynamic {
  background: transparent;
  border: none;
}

#bookmark-form.post.bookmark form fieldset h4.heading {
  color: #4a4a6a;
}

.dynamic form p.footnote {
  margin-bottom: 1em;
}

.bookmark .user {
  background: rgba(238, 234, 204, 0.9);
  border: 1px solid #c5d8e8;
  box-shadow: none;
}

.reading h4.viewed {
  background: #c5d8e8;
  border: 1px solid #b0aed4;
  border-radius: 8px;
  padding: .5em;
  margin: .5em;
  box-shadow: none;
}

dl.index dd {
  background: transparent;
}

dl.subscription.index.group {
  background: rgba(238, 234, 204, 0.9);
  padding: 1em;
}

#main.users-edit.dashboard.region dl,
#main.pseuds-edit.dashboard.region dl,
#main.users-change_username.dashboard.region dl,
#main.users-change_password.dashboard.region dl,
#main.users-change_email.dashboard.region dl,
dl.meta,
form dl {
  background: #eeeacc;
  color: #4a4a6a;
  border: 1px solid #c5d8e8;
  border-radius: 8px;
  box-shadow: none;
}

.wrapper {
  background: transparent;
  box-shadow: none;
}

.bio.module {
  margin-top: 2em;
  margin-bottom: 2em;
  padding: 1em;
  width: 97%;
  border: 2px solid #c5d8e8;
  border-radius: 8px;
  box-shadow: none;
  background: #eeeacc;
}

.bio.module h3.heading {
  visibility: hidden;
}

.bio.module h3.heading::before {
  visibility: visible;
  content: " A note from the user:";
  font-size: 150%;
  text-decoration: underline;
  color: #4a4a6a;
}

img[src$="/images/skins/iconsets/default/icon_user.png"] {
  box-sizing: border-box;
  content: url("https://i.ibb.co/k21bddpp/Miffy-4.jpg");
}

.index .skins .icon,
.skins .primary .icon {
  background: url("https://i.ibb.co/k21bddpp/Miffy-4.jpg");
  background-size: 55px 55px;
  background-repeat: no-repeat;
}

.comment .icon .visitor {
  background: url("https://i.ibb.co/k21bddpp/Miffy-4.jpg");
  background-size: 100px 100px;
  background-repeat: no-repeat;
}

.comment div.icon {
  background: #eeeacc;
  border-bottom: 5px solid #c5d8e8;
  border-radius: 8px 0px 0px 0px;
  box-shadow: none;
}

.comment h4.byline {
  background: #eeeacc;
  border-radius: 8px;
  color: #4a4a6a;
}

div.comment {
  border: none;
}

li.comment {
  background: rgba(238, 234, 204, 0.9);
  border: 2px solid #c5d8e8;
  border-radius: 8px;
  box-shadow: none;
  margin: 1em;
  color: #4a4a6a;
}

.thread .even {
  background: #eeeacc;
  color: #4a4a6a;
}

ol.comment.index.group .read {
  background: #c5d8e8;
  color: #4a4a6a;
}

ol.comment.index.group .unread {
  background: #eeeacc;
  color: #4a4a6a;
}

.replied {
  border: 1px solid #b0aed4;
  border-radius: 8px;
  background: #c5d8e8 !important;
  color: #222240 !important;
  box-shadow: none;
}

span.unread {
  border: 1px solid #c5d8e8;
  border-radius: 8px;
  background: #c5d8e8 !important;
  color: #222240 !important;
  box-shadow: none;
}

.draft {
  border: 2px dashed #c5d8e8;
  background: transparent;
}

.draft.work .wrapper {
  background: #eeeacc;
}

#previewpane fieldset {
  border: none;
  box-shadow: none;
  background: none;
}

.child,
.unwrangled,
.unreviewed {
  background: #eeeacc;
}

.ui-sortable li {
  background: transparent;
  border: transparent;
  color: #4a4a6a;
}
/* ... */

